<resources>
    <string name="app_name">InternshalaApp</string>
    <string name="name">Type your Name</string>
    <string name="email">Type your Email Address</string>
    <string name="dob">Date of Birth</string>
    <string name="age">Age</string>
    <string name="password">Type your Password</string>
    <string name="login_screen_text">Welcome Back</string>
    <string name="reg_screen_text">Hello, There</string>
    <string name="todo">Add a To-Do Task</string>
    <string name="todo_fill">Enter...</string>


</resources>